fix: test를 given-when-then 구조로 변경