@@ -2,7 +2,7 @@ package lotto;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.List;
+import java.util.Arrays;
 import lotto.domain.Lotto;
 import lotto.domain.LottoManager;
 import lotto.domain.LottoNumber;
@@ -12,19 +12,22 @@ import org.junit.jupiter.api.Test;
 public class LottoManagerTest {
 
     private Lotto lotto = new Lotto(
-        () -> List.of(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3),
+        () -> Arrays.asList(new LottoNumber(1), new LottoNumber(2), new LottoNumber(3),
             new LottoNumber(4), new LottoNumber(5), new LottoNumber(6)));
 
     @Test
     public void calculateReturnRate() {
-        Lottos lottos = new Lottos(List.of(lotto));
-
+        //given
+        Lottos lottos = new Lottos(Arrays.asList(lotto));
         LottoManager lottoManager = new LottoManager(lottos);
-
         lottoManager.makeWinningLotto(lotto);
-        lottoManager.calculateRateOfReturn(1000);
+        double expectedReturnRate = 2_000_000;
 
-        assertThat(lottoManager.calculateRateOfReturn(20000)).isEqualTo(100000);
+        //when
+        double actualReturnRate = lottoManager.calculateRateOfReturn(1_000);
+
+        //then
+        assertThat(actualReturnRate).isEqualTo(expectedReturnRate);
 
     }
 }
